[build-system]
requires = ["setuptools>=67.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytubefix"
version = "1.6.0"
authors = [
  { name="Juan Bindez", email="juanbindez780@gmail.com" },
]
description = "Python 3 library for downloading YouTube Videos."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT license"}
keywords = ["youtube", "download", "video", "stream",]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python",
	"Topic :: Internet",
	"Topic :: Multimedia :: Video",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Terminals",
	"Topic :: Utilities",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/juanbindez/pytubefix"
"Bug Reports" = "https://github.com/juanbindez/pytubefix/issues"
"Read the Docs" = "http://pytubefix.readthedocs.io/"

[project.scripts]
pytubefix = "pytubefix.cli:main"

[tool.setuptools.packages.find]
where = ["pytubefix"]

[tool.setuptools]
license-files = ["LICENSE"]


####### BUMPV #######

[tool.bumpversion]
current_version = "1.6.0"
allow_dirty = true
commit = true
tag = True

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pytubefix/version.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""